# skyrim_known_spells_icon

./: .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PCH.h  README.md  vcpkg-configuration.json  vcpkg.json
assets/Interface/KnownSpellTomeIcon/: knownSpellTomeIcon.swf
config/: known_spells.json
resources/: before_and_after.pdn
scripts/: bootstrap-vcpkg.ps1  build.ps1  configure.ps1  deploy.ps1  install-deps.ps1
src/: main.cpp
